# win-wasapi-capture

./: .gitignore  CMakeLists.txt  README.md
docs/: README-attach.md
source/: CMakeLists.txt  plugin-main.cpp  wasapi-hook-info.h  win-wasapi-capture.cpp  win-wasapi-capture.h
source/inject-helper/: CMakeLists.txt
source/wasapi-hook/: CMakeLists.txt  wasapi-hook.cpp
